--- a/student/templates/student/hostel.html
+++ b/student/templates/student/hostel.html
@@ -16,7 +16,7 @@
     <link href={% static "css/style.css" %} type="text/css" rel="stylesheet">
     <script>
         var angle = 0;
-function galleryspin(sign) { 
+function galleryspin(sign) {
 spinner = document.querySelector("#spinner");
 if (!sign) { angle = angle + 45; } else { angle = angle - 45; }
 spinner.setAttribute("style","-webkit-transform: rotateY("+ angle +"deg); -moz-transform: rotateY("+ angle +"deg); transform: rotateY("+ angle +"deg);");
@@ -25,9 +25,9 @@ spinner.setAttribute("style","-webkit-transform: rotateY("+ angle +"deg); -moz-t
 
   </head>
   <body>
-    <nav class="blue" role="navigation">
+    <nav class="top-nav" role="navigation">
       <div class="nav-wrapper container">
-        <a id="logo-container" href="#" class="brand-logo">Home </a>
+        <a id="logo-container" href="#" class="brand-logo">IIT (BHU) Varanasi</a>
         <ul class="right hide-on-med-and-down">
           <li><a href="#">Notification</a></li>
           <li><a href="https://drive.google.com/file/d/0B11jnltBT3TFYzRKbjJXYUcwM2ctQld1TkFvZ2FGZTBPaTRr/view?usp=sharing">Rooms</a></li>
@@ -70,7 +70,7 @@ spinner.setAttribute("style","-webkit-transform: rotateY("+ angle +"deg); -moz-t
                         <li data-target="#imageCarousel" data-slide-to="0" class="active"></li>
                         <li data-target="#imageCarousel" data-slide-to="1"></li>
                         <li data-target="#imageCarousel" data-slide-to="2"></li>
-                        
+
                     </ol>
 
                     <div class="carousel-inner">
@@ -95,7 +95,7 @@ spinner.setAttribute("style","-webkit-transform: rotateY("+ angle +"deg); -moz-t
                                 <p>Image Description</p>
                             </div>
                         </div>
-                       
+
                     </div>
 
                     <a href="#imageCarousel" class="carousel-control left" data-slide="prev">
@@ -113,7 +113,7 @@ spinner.setAttribute("style","-webkit-transform: rotateY("+ angle +"deg); -moz-t
     </script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
 
-    
+
 
       <div class="container">
         <div class="row">
@@ -154,7 +154,7 @@ spinner.setAttribute("style","-webkit-transform: rotateY("+ angle +"deg); -moz-t
           </div>
         </div>
 
-        
+
 
         </div>
 
@@ -207,7 +207,7 @@ spinner.setAttribute("style","-webkit-transform: rotateY("+ angle +"deg); -moz-t
     <section class="container">
       <h4 align="center">Warden's Contacts:<h4>
       <div class="row warden-contact">
-        
+
         <div class="col sm12 m2.5">
           <img src={% static "images/aa.jpg" %} class="contacts w-contacts" align="middle">
           <figcaption align="left" ><font size="5">Dr. S.K. Singh</font></figcaption>
@@ -220,13 +220,13 @@ spinner.setAttribute("style","-webkit-transform: rotateY("+ angle +"deg); -moz-t
           <img src={% static "images/aa.jpg" %} class="contacts w-contacts" align="middle">
           <figcaption align="left" ><font size="5">Dr. Pradip Kumar roy</font></figcaption>
         </div>
-      </div> 
+      </div>
     </section>
 
     <section class="container warden-contact">
       <h5 align="center">HEC Contacts:<h5>
       <div class="row hec-contacts">
-        
+
         <div class="col sm12 m2">
           <img src={% static "images/aa.jpg" %} class="contacts w-contacts" >
           <figcaption align="left" ><font size="5">Avinash Kumar</font></figcaption>
@@ -247,7 +247,7 @@ spinner.setAttribute("style","-webkit-transform: rotateY("+ angle +"deg); -moz-t
           <img src={% static "images/aa.jpg" %} class="contacts w-contacts">
           <figcaption align="left" ><font size="5">Sparsh Goyal</font></figcaption>
         </div>
-      </div> 
+      </div>
     </section>
 
     <footer class="page-footer teal">
@@ -269,7 +269,7 @@ spinner.setAttribute("style","-webkit-transform: rotateY("+ angle +"deg); -moz-t
             </p>
           </div>
       </div>
-     
+
     </footer>
 
 
