--- a/student/static/css/style.css
+++ b/student/static/css/style.css
@@ -8,7 +8,15 @@
 
 nav ul a,
 nav .brand-logo {
-  color: #444;
+  color: #fff;
+}
+
+nav ul a:hover, nav ul a:focus {
+  color: #fff;
+  text-decoration: none;
+}
+a:hover, a:focus {
+  text-decoration: none;
 }
 
 p {
@@ -78,12 +86,12 @@ section{
 
 ::-webkit-scrollbar {
     width: 6px;
-} 
+}
 ::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
-} 
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
 ::-webkit-scrollbar-thumb {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 }
 
 
@@ -104,7 +112,7 @@ section h4 {
   height: auto;
   margin: 0 auto;
   display: table;
-  
+
 }
 img.contacts{
   padding-right: 0px;
