--- a/student/templates/student/hostel.html
+++ b/student/templates/student/hostel.html
@@ -27,7 +27,8 @@ spinner.setAttribute("style","-webkit-transform: rotateY("+ angle +"deg); -moz-t
   <body>
     <nav class="top-nav" role="navigation">
       <div class="nav-wrapper container">
-        <a id="logo-container" href="#" class="brand-logo">IIT (BHU) Varanasi</a>
+        <img src={% static "images/iitbhu-logo.png" %} height="50">
+        <!-- <a id="logo-container" href="#" class="brand-logo">IIT (BHU) Varanasi</a> -->
         <ul class="right hide-on-med-and-down">
           <li><a href="#">Notification</a></li>
           <li><a href="https://drive.google.com/file/d/0B11jnltBT3TFYzRKbjJXYUcwM2ctQld1TkFvZ2FGZTBPaTRr/view?usp=sharing">Rooms</a></li>
