--- a/student/templates/student/hostel.html
+++ b/student/templates/student/hostel.html
@@ -175,7 +175,8 @@ spinner.setAttribute("style","-webkit-transform: rotateY("+ angle +"deg); -moz-t
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-            <h5 class="center" style="font-size : 26px;">Mess Details</h5>
+            <h5 class="center" style="font-size : 26px;">Mess Bills Details</h5>
+            <p>Please click on repective mess to see the mess bills details!</p>
 
             <div class="mess-info">
 
@@ -216,6 +217,7 @@ spinner.setAttribute("style","-webkit-transform: rotateY("+ angle +"deg); -moz-t
         </div>
       </div>
       </div>
+      <hr>
 
 
     <section class="container">
