--- a/student/templates/student/hostel.html
+++ b/student/templates/student/hostel.html
@@ -247,22 +247,25 @@ spinner.setAttribute("style","-webkit-transform: rotateY("+ angle +"deg); -moz-t
     <footer class="page-footer teal">
       <div class="container">
         <div class="row">
-          <div class="col l6 s12">
-            <h5 class="white-text">IIT (BHU)</h5>
+          <div class="col s12 m4 footer-first-tab">
+            <img src={% static "images/iitbhu-logo.png" %} height="50">
             <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
           </div>
-          <div class="col l6 s12">
+          <div class="col s12 m4">
             <h5 class="white-text" style="text-align:center;">Emergency Contacts</h5>
             <p class="grey-text text-lighten-4">
-            chief proctor: 9450545650  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp;
-            IIT BHU chief proctor : 8004925734<br>
-            BHU control room : +91 5422369134 &nbsp; &nbsp; &nbsp; &nbsp;
-            Ambulance contact no. : 0542-2309279, 2309308<br>
-            Sunderlal no. : 8541805443 &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-            Fire Brigade, Bhelupur : 0542-2452888<br>
+
+            </p>
+          </div>
+          <div class="col s12 m4">
+            <h5 class="white-text" style="text-align:center;">Important Links</h5>
+            <p class="grey-text text-lighten-4">
+
             </p>
           </div>
       </div>
+<hr>
+      <div class="footer-line">Hostel Portal, IIT (BHU) Varanasi | All rights reserved &copy; 2018</div>
 
     </footer>
 
