--- a/student/templates/student/hostel.html
+++ b/student/templates/student/hostel.html
@@ -246,7 +246,7 @@ spinner.setAttribute("style","-webkit-transform: rotateY("+ angle +"deg); -moz-t
 
     <footer class="page-footer teal">
       <div class="container">
-        <div class="row">
+        <!-- <div class="row">
           <div class="col s12 m4 footer-first-tab">
             <img src={% static "images/iitbhu-logo.png" %} height="50">
             <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
@@ -263,9 +263,8 @@ spinner.setAttribute("style","-webkit-transform: rotateY("+ angle +"deg); -moz-t
 
             </p>
           </div>
-      </div>
-<hr>
-      <div class="footer-line">Hostel Portal, IIT (BHU) Varanasi | All rights reserved &copy; 2018</div>
+      </div> -->
+      <div class="footer-line">Design and Developed by the Team Hostel Portal, IIT (BHU) Varanasi | All rights reserved &copy; 2018</div>
 
     </footer>
 
