--- a/student/templates/student/hostel.html
+++ b/student/templates/student/hostel.html
@@ -221,7 +221,8 @@ spinner.setAttribute("style","-webkit-transform: rotateY("+ angle +"deg); -moz-t
 
 
     <section class="container">
-      <h4 align="center">Warden's Contacts:</h4>
+      <h4 align="center">Warden's Contacts</h4>
+      <hr class="custom_hr">
       <div class="row warden-contact">
         {% for warden in all_wardens %}
         <div class="col sm12 m2.5">
@@ -234,7 +235,8 @@ spinner.setAttribute("style","-webkit-transform: rotateY("+ angle +"deg); -moz-t
     <hr>
 
     <section class="container warden-contact">
-      <h5 align="center">HEC Contacts:<h5>
+      <h4 align="center">HEC Contacts</h4>
+      <hr class="custom_hr">
       <div class="row hec-contacts">
         {% for members in all_hec %}
         <div class="col sm12 m2">
