--- a/student/templates/student/hostel.html
+++ b/student/templates/student/hostel.html
@@ -225,7 +225,7 @@ spinner.setAttribute("style","-webkit-transform: rotateY("+ angle +"deg); -moz-t
       <hr class="custom_hr">
       <div class="row warden-contact">
         {% for warden in all_wardens %}
-        <div class="col sm12 m2.5">
+        <div class="inner">
           <img src="{{ warden.profile_photo.url }}" class="contacts w-contacts" align="middle">
           <figcaption align="left" ><font size="5">{{ warden.warden_name }}</font></figcaption>
         </div>
@@ -234,13 +234,13 @@ spinner.setAttribute("style","-webkit-transform: rotateY("+ angle +"deg); -moz-t
     </section>
     <hr>
 
-    <section class="container warden-contact">
+    <section class="container">
       <h4 align="center">HEC Contacts</h4>
       <hr class="custom_hr">
-      <div class="row hec-contacts">
+      <div class="row hec-contact">
         {% for members in all_hec %}
-        <div class="col sm12 m2">
-          <img src="{{ members.profile_image.url }}" class="contacts w-contacts" >
+        <div class="inner">
+          <img src="{{ members.profile_image.url }}" class="contacts w-contacts" align="middle">
           <figcaption align="center" ><font size="5">{{ members.member_name }}</font></figcaption>
         </div>
         {% endfor %}
