--- a/student/static/css/style.css
+++ b/student/static/css/style.css
@@ -190,6 +190,8 @@ section h4 {
 
 img.contacts{
   padding-right: 0px;
+  height: 150px;
+  border-radius: 54px;
 }
 figcaption.figc{
   text-align: left;
