--- a/student/templates/student/hostel.html
+++ b/student/templates/student/hostel.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href={% static "css/materials.css" %} type="text/css" rel="stylesheet">
     <link href={% static "css/style.css" %} type="text/css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script>
         var angle = 0;
 function galleryspin(sign) {
@@ -225,9 +226,18 @@ spinner.setAttribute("style","-webkit-transform: rotateY("+ angle +"deg); -moz-t
       <hr class="custom_hr">
       <div class="row warden-contact">
         {% for warden in all_wardens %}
-        <div class="inner">
+        <div class="inner" style="text-align: center">
           <img src="{{ warden.profile_photo.url }}" class="contacts w-contacts" align="middle">
-          <figcaption align="center" ><font size="3">{{ warden.warden_name }}</font></figcaption>
+          <figcaption align="center" ><font size="4">{{ warden.warden_name }}</font></figcaption>
+          <figcaption align="center" ><font size="3">Admin Warden</font></figcaption>
+          <figcaption align="center" ><span class="col-md-12 section3" style="color:#7f7f7f;">
+              <i class="fa fa-phone" style="color:#7f7f7f;"></i>
+              8726198956
+          </span></figcaption>
+          <figcaption align="center" ><span class="col-md-12 section3 inline" style="color:#7f7f7f;">
+            <i class="fa fa-envelope" aria-hidden="true"></i>
+              abhinavkr.singh.cse15@iitbhu.ac.in
+          </span></figcaption>
         </div>
         {% endfor %}
       </div>
@@ -241,7 +251,7 @@ spinner.setAttribute("style","-webkit-transform: rotateY("+ angle +"deg); -moz-t
         {% for members in all_hec %}
         <div class="inner">
           <img src="{{ members.profile_image.url }}" class="contacts w-contacts" align="middle">
-          <figcaption align="center" ><font size="3">{{ members.member_name }}</font></figcaption>
+          <figcaption align="center" ><font size="4">{{ members.member_name }}</font></figcaption>
         </div>
         {% endfor %}
       </div>
