--- a/student/static/css/style.css
+++ b/student/static/css/style.css
@@ -183,14 +183,12 @@ section h4 {
 .container .hec-contact{
   height: auto;
   margin: 0 auto;
-  padding-bottom: 10px;
   display: flex;
   justify-content: space-around;
   flex-direction: row;
 }
 
 img.contacts{
-  img-align: center;
   padding-right: 0px;
   height: 150px;
   border-radius: 50%;
@@ -224,3 +222,54 @@ figcaption.figc{
 .footer-first-tab p {
   text-align: center;
 }
+
+/*responsive */
+
+#Responsive-logo{
+  display: hidden;
+  width:48px;
+  height: 48px;
+  background-size: 37px;
+}
+@media screen and (max-width: 786px){
+  *{
+    margin : 0;
+  }
+  #Responsive-logo{
+    display: inline-block;
+    background:rgb(40,50,60);
+    border: 1px solid grey;
+    border-radius:5px;
+  }
+  nav ul, nav:active ul{
+    display:none;
+    position: absolute;
+    z-index: 1000;
+    padding:10px;
+    background:#191929;
+    right:25px;
+    top:30px;
+    border:2px solid #F0F0F0;
+    border-radius: 8px 8px 8px 8px;
+    width:43%;
+    opacity: 0.92;
+  }
+	nav:hover ul{
+		display: block;
+	}
+	nav li{
+		text-align: center;
+		width: 100%;
+		padding: 10px 0;
+	}
+
+	nav li a{
+		text-align: center;
+		display: inline-block;
+	}
+	.hostel-collection, .slide, .about_us, .notifications-hostel, .hec-contact, .mess-info,
+	 .icon-block, .two , .warden-contact , .w-contacts{
+		width: 100%;
+	}
+} 
+
